# nomad-usb

./: .gitignore  Dockerfile  README.md  REMOVE-OLD-FILES-v051.sh  REMOVE-OLD-FILES.sh  ROADMAP.docx  build.sh
auto/: build  clean  config
config/: binary
config/hooks/normal/: 0010-nomad-setup.hook.chroot
config/includes.chroot/etc/: hosts  nomad-version
config/includes.chroot/etc/connman/: main.conf
config/includes.chroot/etc/docker/: daemon.json
config/includes.chroot/etc/live/config.conf.d/: nomad.conf
config/includes.chroot/etc/profile.d/: nomad-banner.sh
config/includes.chroot/etc/ssh/sshd_config.d/: nomad.conf
config/includes.chroot/etc/sudoers.d/: nomad
config/includes.chroot/etc/systemd/system/: nomad-firstboot-ui.service  nomad-init.service  nomad-mount.service  nomad-passwords.service  nomad-quiet-console.service  nomad-ssh-keys.service  nomad-start.service
config/includes.chroot/usr/local/sbin/: nomad-firstboot-ui  nomad-hotspot  (+6 more)
config/package-lists/: base.list.chroot  docker.list.chroot  firmware.list.chroot  hotspot.list.chroot  networking.list.chroot
flash/: README.md  pyproject.toml  sync-template.sh
flash/nomad_flash/: __init__.py  apps_catalog.py  browse.py  cli.py  cli_runner.py  devices.py  flash_pipeline.py  runner.py  steps_download.py  steps_images.py  steps_iso.py  steps_partition.py  steps_prebuilt.py  verify.py  web.py
flash/nomad_flash/bundled/: docker-compose.yml
flash/nomad_flash/static/css/: app.css
flash/nomad_flash/static/js/: app.js
flash/nomad_flash/templates/: index.html
scripts/: test-flash.sh
(+3 files in other folders)
